[project]
name = "DoxygenToRST"
version = "0.0.1"
authors = [
  { name="Teo BOUTIN", email="teo.boutin@cea.fr" },
]
description = "A package to convert doxygen xml data to rst for use in a sphinx documentation"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]

[project.urls]
Source = "https://https://github.com/cea-trust-platform/DoxygenToRST"